--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 	</nav>
 	<section>
 		<article>
-			<h2></h2>
+			<h2>Titulo de la Web Site</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat, libero, magnam illo sint culpa deserunt voluptas natus dolorum provident aut cumque consectetur incidunt id amet mollitia autem ex necessitatibus optio.</p>
 		</article>
 	</section>
 </body>
